--- a/templates/macros/_renderpost.html
+++ b/templates/macros/_renderpost.html
@@ -11,10 +11,8 @@
 		<!-- github link and timestamp  -->
 		{% if post[4] != '' %}
 			<h4 class="push-sm">
-				<a href="{{ post[4] }}" target="_blank">
-					<i class="fa fa-github-square"></i>
-				</a>
-				<small>| {{ post[3] }}</small>
+				<a href="{{ post[4] }}" target="_blank"><i class="fa fa-github-square"></i></a>
+				<small> | {{ post[3] }}</small>
 			</h4>
 		{% else %}	
 			<h4><small>{{ post[3] }}</small></h4>
