--- a/templates/records.html
+++ b/templates/records.html
@@ -16,7 +16,9 @@
 		    {% endfor %}
 		  {% endif %}
 		{% endwith %}
+		<div id="letter"><i class="fa fa-envelope" aria-hidden="true"></i></div>
 		<div id="plus"><p>+</p></div>
+		
 	 	<div id="addform">
 		 	{% from "macros/_renderfield.html" import render_field %}
 			<form method='POST' action="/records" class=''>
@@ -48,40 +50,82 @@
 						<dl>
 							{{ render_field(AddRecord.notes) }}
 						</dl>
+
+						<dl>
+							{{ render_field(AddRecord.mail) }}
+						</dl>
 						<button class="btn" type="submit">Add Record</button>
 					</form>
 		</div>		
 
+
 	 	<!-- Tables -->
-		{% for key, value in records.items() %}
-		<table id="{{ key }}">
-			<thead>
-				<tr>
-					<th class="size">{{ key }} Inch</th>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th colspan='all' class="count">{{ value|length }}</th>
-				</tr>
-			</thead>
-			<tbody>
-			{%  for lst in value %}
-				<tr>
-
-					<td id="{{ lst[0] }}">{{ lst[1] }}</td>
-					<td>{{ lst[2] }}</td>
-					<td>{{ lst[3] }}</td>
-					<td>{{ lst[4] }}</td>
-					<td class="notes">{{ lst[5] }}</td>
-					{% if session["logged_in"] == True %}
-						<td><a href="/deleterecord/{{ lst[0] }}">Delete</a></td>
-					{% endif %}
-				</tr>
+	 	<div class="have">
+			{% for key, value in records.items() %}
+				<table id="{{ key }}">
+					<thead>
+						<tr>
+							<th class="size">{{ key }} Inch</th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th colspan='all' class="count">{{ value|length }}</th>
+						</tr>
+					</thead>
+					<tbody>
+					{%  for lst in value %}
+						{% if lst[9] == False %}
+							<tr>
+								<td id="{{ lst[0] }}">{{ lst[1] }}</td>
+								<td>{{ lst[2] }}</td>
+								<td>{{ lst[3] }}</td>
+								<td>{{ lst[4] }}</td>
+								<td class="notes">{{ lst[5] }}</td>
+								{% if session["logged_in"] == True %}
+									<td><a href="/deleterecord/{{ lst[0] }}">Delete</a></td>
+								{% endif %}
+							</tr>
+						{% endif %}
+					{% endfor %}
+					</tbody>
+				</table>
 			{% endfor %}
-			</tbody>
-		</table>
-		{% endfor %}
+		</div>
 
+		<div class="mail">
+			{% for key, value in mail.items() %}
+			{% if value|length > 0%}
+				<table id="{{ key }}">
+					<thead>
+						<tr>
+							<th class="size">{{ key }} Inch</th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th colspan='all' class="count">{{ value|length }}</th>
+						</tr>
+					</thead>
+					<tbody>
+					{%  for lst in value %}
+						{% if lst[9] == True %}
+							<tr>
+								<td id="{{ lst[0] }}">{{ lst[1] }}</td>
+								<td>{{ lst[2] }}</td>
+								<td>{{ lst[3] }}</td>
+								<td>{{ lst[4] }}</td>
+								<td class="notes">{{ lst[5] }}</td>
+								{% if session["logged_in"] == True %}
+									<td><a href="/deleterecord/{{ lst[0] }}">Delete</a></td>
+									<td><a href="/mail/{{ lst[0] }}">Update</a></td>
+								{% endif %}
+							</tr>
+						{% endif %}
+					{% endfor %}
+					</tbody>
+				</table>
+				{% endif %}
+			{% endfor %}
+		</div>
 	</div>
 </div>
 
@@ -92,12 +136,11 @@
 
 	if ( $('#submit_error').length > 0 ) {
 		$("#plus").addClass('rotate');
-	} else {
-		$("#addform").hide();
+		$("#addform").show();
 	}
-	
 
 	$("#plus").on('click', function(){
+		$('#letter').toggle();
 		$("#addform").toggle();
 
 		if ( $('#addform').attr('style') != 'display: none;' ) {
@@ -105,9 +148,16 @@
 		} else {
 			$("#plus").removeClass('rotate');
 		}
-
-
 	});
+
+	// mail
+	$("#letter").on('click', function(){
+		$(".have").toggle();
+		$('.mail').toggle();
+
+	})
+
+
 </script>
 
 
