--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="/static/bootstrap.min.js/"></script>
-	<script src="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
+	<meta name="pagename" content="{% if request.path == '/' %}Home{%elif request.path == '/todo' %}To Do{% elif request.path == '/resume' %}Resume{% endif %}">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.min.js/"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -17,14 +16,12 @@
 	  ga('send', 'pageview');
 
 	</script>	
-	<link rel="stylesheet" href="/static/bootstrap.min.css/" type='text/css'>
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css/" type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/static/main.css/" type='text/css'>
-	<link href="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.min.css" type="text/css" rel="stylesheet" />
-	<link href="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
+	<link rel="stylesheet" href="/static/css/main.css/" type='text/css'>
 
-	<title>{{ CONTENT_DICT['name'] }}{% for item in CONTENT_DICT['Navigation'] %}{% if item[1] == request.path and item[1] != "/" %} - {{ item[0] }}{% endif %}{% endfor %}</title>
+	<title>John Simmons | {% if request.path == '/' %}Home{%elif request.path == '/todo' %}To Do{% elif request.path == '/resume' %}Resume{% endif %} </title>
 </head>
 <body>
 	<nav class="navbar navbar-default push-lg">
@@ -37,37 +34,33 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="{{ url_for('index') }}">{{ CONTENT_DICT['name'] }}</a>
+	      <a class="navbar-brand" href="{{ url_for('main.index') }}">John Simmons</a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        {% for item in CONTENT_DICT['Navigation'] %}
-				<li role="presentation" >
-					{% if item[1] != request.path %}
-						<a href="{{ item[1] }}">{{ item[0]|safe }}</a>
-					{% else %}
-						<a class="selected">{{ item[0] }}</a>
-					{% endif %}
+				<li role="presentation">
+					<a {% if request.path == '/'%}class="selected"{% endif %} href="{{ url_for('main.index')}}">Home</a>
 				</li>
-			{% endfor %}
+				<li role="presentation">
+					<a {% if request.path == '/resume'%}class="selected"{% endif %} href="{{ url_for('main.resume')}}">Resume</a>
+				</li>
+				<li role="presentation">
+					<a {% if request.path == '/todo'%}class="selected"{% endif %}href="{{ url_for('main.todo')}}">To-Do</a>
+				</li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
 
 	<div class="container">
-		{% block content %}
+		{% block pagecontent %}
 		{% endblock %}
 		<footer>
 			<small>
 				<p class="text-center">
-					{% if session["logged_in"] != True %}
-						<a href="/login">{{ CONTENT_DICT['name'] }} &copy; {{ CONTENT_DICT['year'] }}</a>
-					{% else %}
-						<a href="/logout">{{ CONTENT_DICT['name'] }} &copy; {{ CONTENT_DICT['year'] }}</a>
-					{% endif %}
+					John Simmons &copy; {{CONTENT_DICT['year']}}
 				</p>
 			</small>
 		</footer>
