--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -21,7 +21,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/static/css/main.css/" type='text/css'>
 
-	<title>John Simmons | {% if request.path == '/' %}Home{%elif request.path == '/todo' %}To Do{% elif request.path == '/resume' %}Resume{% endif %} </title>
+	<title>John Simmons{% if request.path == '/' %} | Home{%elif request.path == '/todo' %} | To Do{% elif request.path == '/resume' %} | Resume{% endif %} </title>
 </head>
 <body>
 	<nav class="navbar navbar-default push-lg">
