--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -6,7 +6,8 @@
 <div class="row">
 	<div class="col-sm-12">
 		<h1 class="text-center res-name">John Simmons</h1>
-		<h2 class="text-center res-con push-lg">johndavidsimmons@gmail.com</h2>
+		<h2 class="text-center res-con">johndavidsimmons@gmail.com</h2>
+		<h2 class="text-center res-con push-lg"><a href="{{ url_for('main.download') }}">Download PDF</a></h2>
 		<p class='text-center res-head push-sm'><em>&mdash;Work&mdash;</em></p>
 	</div>
 </div>
