--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -15,7 +15,8 @@
 	  ga('create', 'UA-72067721-1', 'auto');
 	  ga('send', 'pageview');
 
-	</script>	
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css/" type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
@@ -41,9 +42,6 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
 				<li role="presentation">
-					<a {% if request.path == '/'%}class="selected"{% endif %} href="{{ url_for('main.index')}}">Home</a>
-				</li>
-				<li role="presentation">
 					<a {% if request.path == '/resume'%}class="selected"{% endif %} href="{{ url_for('main.resume')}}">Resume</a>
 				</li>
 	      </ul>
@@ -51,7 +49,7 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 
-	<div class="container">
+	<div class="container">		
 		{% block pagecontent %}
 		{% endblock %}
 		<footer>
