rm old packages

--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -20,7 +20,7 @@
 	<div class="col-sm-6 col-sm-offset-3">
 		<strong><a href="https://medium.com/@johndavidsimmons" target="_blank">Medium Blog</a></strong><p>I write about Adobe Analytics, Qualtrics, Python, and tinkering with Raspberry Pis</p>
 		<strong><a href="https://github.com/johndavidsimmons/Ext-QSI" target="_blank">QSI Launch Extension</a></strong><p>An Adobe Launch extension for loading Qualtrics Site Intercept Zone codes.</p>
-		<strong><a href="https://github.com/MisterPhilip/omnibug/graphs/contributors" target="_blank">Omnibug Mparticle Integration</a></strong><p>An addition to the Omnibug analytics debugger browser extension for inspecting mParticle network requests.</p>
+		<strong><a href="https://github.com/MisterPhilip/omnibug/graphs/contributors" target="_blank">Omnibug Contributions</a></strong><p>Active contributor to the Omnibug (web analytics debugger) Chrome Extension.</p>
 	</div>
 </div>
 
