--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -25,9 +25,8 @@
 	<title>John Simmons{% if request.path == '/' %} | Home{%elif request.path == '/todo' %} | To Do{% elif request.path == '/resume' %} | Resume{% endif %} </title>
 </head>
 <body>
-	<nav class="navbar navbar-default push-lg">
+	<!-- <nav class="navbar navbar-default push-lg">
 	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 	        <span class="sr-only">Toggle navigation</span>
@@ -38,16 +37,16 @@
 	      <a class="navbar-brand" href="{{ url_for('main.index') }}">John Simmons</a>
 	    </div>
 
-	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
 				<li role="presentation">
 					<a {% if request.path == '/resume'%}class="selected"{% endif %} href="{{ url_for('main.resume')}}">Resume</a>
 				</li>
 	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
+	    </div>
+	  </div>
+	</nav> -->
 
 	<div class="container">		
 		{% block pagecontent %}
