--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -6,24 +6,10 @@
 <div class="row">
 	<div class="col-sm-12">
 		<h1 class="text-center res-name">John Simmons</h1>
-		<h2 class="text-center res-con">johndavidsimmons@gmail.com</h2>
+		<h2 class="text-center res-con">john.simmons@bounteous.com</h2>
 		<h2 class="text-center res-con"><a href="https://measure.slack.com" target="_blank">#Measure Slack:</a> @johnsimmons</h2>
-		<h2 class="text-center res-con push-lg"><a href="{{ url_for('main.download') }}">Download PDF</a></h2>
 	</div>
 </div>
-
-<!-- Blog and Projects -->
-<div class="row">
-	<div class="col-sm-6 col-sm-offset-3">
-		<p class='text-center res-head push-sm'><em>&mdash;Blog & Projects&mdash;</em></p>
-	</div>
-	<div class="col-sm-6 col-sm-offset-3">
-		<strong><a href="https://medium.com/@johndavidsimmons" target="_blank">Medium Blog</a></strong><p>I write about Adobe Analytics, Qualtrics, Python, and tinkering with Raspberry Pis</p>
-		<strong><a href="https://github.com/johndavidsimmons/Ext-QSI" target="_blank">QSI Launch Extension</a></strong><p>An Adobe Launch extension for loading Qualtrics Site Intercept Zone codes.</p>
-		<strong><a href="https://github.com/MisterPhilip/omnibug/graphs/contributors" target="_blank">Omnibug Contributions</a></strong><p>Active contributor to the Omnibug (web analytics debugger) Chrome Extension.</p>
-	</div>
-</div>
-
 
 <!-- Work -->
 <div class="row" id="work">
@@ -42,7 +28,7 @@
 <!-- School -->
 <div class="row">
 	<div class="col-sm-12">
-		<p class='text-center res-head push-sm'><em>&mdash;School&mdash;</em></p>
+		<!-- <p class='text-center res-head push-sm'><em>&mdash;School&mdash;</em></p> -->
 	</div>
 	<div class="col-sm-6 col-sm-offset-3">
 		{% for list in CONTENT_DICT['Education'] %}
